--- a/src/pages/SuccessPage.css
+++ b/src/pages/SuccessPage.css
@@ -10,12 +10,12 @@
 
 .success-container {
   background: white;
-  border-radius: 30px;
-  padding: 50px;
+  border-radius: 20px;
+  padding: 35px;
   max-width: 600px;
   width: 100%;
   text-align: center;
-  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 12px 35px rgba(0, 0, 0, 0.15);
   position: relative;
   z-index: 2;
 }
@@ -25,38 +25,38 @@
 }
 
 .checkmark {
-  margin: 0 auto 30px;
-  width: 100px;
-  height: 100px;
+  margin: 0 auto 21px;
+  width: 70px;
+  height: 70px;
 }
 
 .checkmark-circle {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
-  background: linear-gradient(45deg, #00b894, #00a085);
+  background: linear-gradient(45deg, #8a9a8a, #a8b5a8);
   position: relative;
   animation: checkmark-pop 0.6s ease-in-out;
 }
 
 .checkmark-stem {
   position: absolute;
-  width: 3px;
-  height: 25px;
+  width: 2px;
+  height: 17px;
   background: white;
-  left: 45px;
-  top: 55px;
+  left: 32px;
+  top: 38px;
   transform: rotate(45deg);
   animation: checkmark-stem 0.3s ease-in-out 0.6s both;
 }
 
 .checkmark-kick {
   position: absolute;
-  width: 3px;
-  height: 15px;
+  width: 2px;
+  height: 10px;
   background: white;
-  left: 35px;
-  top: 65px;
+  left: 25px;
+  top: 45px;
   transform: rotate(-45deg);
   animation: checkmark-kick 0.3s ease-in-out 0.9s both;
 }
@@ -92,33 +92,33 @@
 }
 
 .success-text h1 {
-  color: #2d3436;
-  font-size: 2.5rem;
+  color: #4a4a4a;
+  font-size: 1.7rem;
   font-weight: 800;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   animation: fadeInUp 0.6s ease-out 0.3s both;
 }
 
 .success-text p {
-  color: #636e72;
-  font-size: 1.2rem;
+  color: #6b6b6b;
+  font-size: 0.8rem;
   animation: fadeInUp 0.6s ease-out 0.6s both;
 }
 
 .order-summary {
   background: #f8f9fa;
-  border-radius: 20px;
-  padding: 30px;
-  margin-bottom: 40px;
+  border-radius: 15px;
+  padding: 21px;
+  margin-bottom: 28px;
   text-align: left;
   animation: fadeInUp 0.6s ease-out 0.9s both;
 }
 
 .order-summary h2 {
-  color: #2d3436;
-  font-size: 1.5rem;
+  color: #4a4a4a;
+  font-size: 1.0rem;
   font-weight: 700;
-  margin-bottom: 20px;
+  margin-bottom: 14px;
   text-align: center;
 }
 
@@ -138,8 +138,8 @@
 }
 
 .order-item-emoji {
-  font-size: 2rem;
-  margin-right: 15px;
+  font-size: 1.4rem;
+  margin-right: 10px;
 }
 
 .order-item-details {
@@ -151,32 +151,33 @@
 
 .order-item-name {
   font-weight: 600;
-  color: #2d3436;
+  color: #4a4a4a;
+  font-size: 0.7rem;
 }
 
 .order-item-quantity {
-  color: #636e72;
-  font-size: 0.9rem;
+  color: #6b6b6b;
+  font-size: 0.6rem;
 }
 
 .order-item-price {
-  color: #00b894;
+  color: #8a9a8a;
   font-weight: 600;
-  font-size: 1.1rem;
+  font-size: 0.8rem;
 }
 
 .order-total {
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 0.9rem;
   font-weight: 700;
-  color: #2d3436;
-  margin-bottom: 10px;
+  color: #4a4a4a;
+  margin-bottom: 7px;
 }
 
 .order-time {
   text-align: center;
-  color: #636e72;
-  font-size: 0.9rem;
+  color: #6b6b6b;
+  font-size: 0.6rem;
 }
 
 .success-actions {
