--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -92,58 +92,7 @@
   transform: translateY(-1px) scale(1.02);
 }
 
-.food-illustrations {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: 1;
-}
-
-.food-item {
-  position: absolute;
-  font-size: 2rem;
-  opacity: 0.3;
-  animation: float 6s ease-in-out infinite;
-}
-
-.food-item:nth-child(1) {
-  top: 20%;
-  left: 10%;
-  animation-delay: 0s;
-}
-
-.food-item:nth-child(2) {
-  top: 30%;
-  right: 15%;
-  animation-delay: 1s;
-}
-
-.food-item:nth-child(3) {
-  top: 60%;
-  left: 20%;
-  animation-delay: 2s;
-}
-
-.food-item:nth-child(4) {
-  top: 70%;
-  right: 25%;
-  animation-delay: 3s;
-}
-
-.food-item:nth-child(5) {
-  top: 40%;
-  left: 5%;
-  animation-delay: 4s;
-}
-
-.food-item:nth-child(6) {
-  top: 50%;
-  right: 10%;
-  animation-delay: 5s;
-}
+/* Food illustrations removed - they were causing visual issues */
 
 @keyframes float {
   0%, 100% {
