--- a/src/pages/RandomIdeaPage.css
+++ b/src/pages/RandomIdeaPage.css
@@ -42,6 +42,7 @@
 }
 
 .idea-header h1 {
+  font-family: 'Simple Routine', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.4rem;
   font-weight: 800;
@@ -92,6 +93,7 @@
 }
 
 .suggestion-text h2 {
+  font-family: 'Simple Routine', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.2rem;
   font-weight: 700;
@@ -99,6 +101,7 @@
 }
 
 .dish-name {
+  font-family: 'Simple Routine', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.4rem;
   font-weight: 800;
