--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -26,7 +26,7 @@
 }
 
 .main-title {
-  font-family: 'Simple Routine', cursive, sans-serif;
+  font-family: 'NanumBrushScript', cursive, sans-serif;
   font-size: 2.2rem;
   font-weight: 800;
   color: #2C3E50;
