--- a/src/pages/MenuPage.css
+++ b/src/pages/MenuPage.css
@@ -41,7 +41,7 @@
 }
 
 .menu-header h1 {
-  font-family: 'Simple Routine', cursive, sans-serif;
+  font-family: 'NanumBrushScript', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.2rem;
   font-weight: 800;
