--- a/src/pages/SuccessPage.css
+++ b/src/pages/SuccessPage.css
@@ -92,7 +92,7 @@
 }
 
 .success-text h1 {
-  font-family: 'NanumBrushScript', cursive, sans-serif;
+  font-family: 'MelonFruit', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.7rem;
   font-weight: 800;
@@ -116,7 +116,7 @@
 }
 
 .order-summary h2 {
-  font-family: 'NanumBrushScript', cursive, sans-serif;
+  font-family: 'MelonFruit', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.0rem;
   font-weight: 700;
