--- a/src/pages/RandomIdeaPage.css
+++ b/src/pages/RandomIdeaPage.css
@@ -42,7 +42,7 @@
 }
 
 .idea-header h1 {
-  font-family: 'NanumBrushScript', cursive, sans-serif;
+  font-family: 'MelonFruit', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.4rem;
   font-weight: 800;
@@ -93,7 +93,7 @@
 }
 
 .suggestion-text h2 {
-  font-family: 'NanumBrushScript', cursive, sans-serif;
+  font-family: 'MelonFruit', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.2rem;
   font-weight: 700;
@@ -101,7 +101,7 @@
 }
 
 .dish-name {
-  font-family: 'NanumBrushScript', cursive, sans-serif;
+  font-family: 'MelonFruit', cursive, sans-serif;
   color: #2C3E50;
   font-size: 1.4rem;
   font-weight: 800;
