--- a/src/pages/RandomIdeaPage.css
+++ b/src/pages/RandomIdeaPage.css
@@ -109,6 +109,7 @@
 }
 
 .dish-description {
+  font-family: 'PipersPlayroom', cursive, sans-serif;
   color: #6C7A89;
   font-size: 0.7rem;
   line-height: 1.4;
@@ -131,6 +132,7 @@
 }
 
 .rating-label {
+  font-family: 'PipersPlayroom', cursive, sans-serif;
   font-weight: 600;
   color: #2C3E50;
   margin-right: 7px;
